--- a/src/components/DataTable/cells/TableStructuredCell.scss
+++ b/src/components/DataTable/cells/TableStructuredCell.scss
@@ -2,7 +2,14 @@ $tree-offset: -20px; // chevron size (16px) + gap (4px)
 
 .moonstone-tableStructuredCell_expandable {
     transform: translateX($tree-offset);
+}
 
+.moonstone-tableStructuredCell_toggle {
+    display: inline-flex;
+    padding: 0;
+
+    border: 0;
+    background: transparent;
     cursor: pointer;
 }
 
